# zkpot

./: Cargo.toml  LICENSE  README.md
crypto/src/random/: default.rs
fiat-shamir/: Cargo.toml
fiat-shamir/src/: channel.rs
fri/: Cargo.toml
fri/src/: batch_proof.rs  lib.rs  utils.rs
fri/src/prover/: batch_prover.rs  mod.rs
math/src/polynom/: mod.rs
mpcith/: Cargo.toml
mpcith/src/: lib.rs
mpcith/src/consistency/: data.rs  mod.rs  pss.rs
mpcith/src/offline/: estimate.py
mpcith/src/online/: mod.rs  utils.rs
mpcith/src/online/epoch/: mod.rs  prove.rs  verify.rs
mpcith/src/online/matvec/: mod.rs  prove.rs  verify.rs
mpcith/src/sample/: data.rs
mpcith/tests/: online.rs
naive-training/: Cargo.toml
naive-training/examples/: train128.rs
naive-training/src/: main.rs
poly-args/: Cargo.toml
poly-args/src/: lib.rs  polyutils.rs  sumcheck.rs  sumcheck_prod.rs
secret-sharing/: Cargo.toml
secret-sharing/src/: pss.rs
utils/rand/src/: lib.rs
