[package]
name = "naive-training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", default-features = false }
ndarray-rand = { version = "0.14", default-features = false }
rand = { version = "0.8", default-features = false }
secret-sharing = {version = "0.1.0", path = "../secret-sharing", package = "secret-sharing", default-features = false}
math={version = "0.6", path = "../math", package = "winter-math", default-features = false}
rand-utils = { version = "0.6", path = "../utils/rand", package = "winter-rand-utils", default-features = false }
crypto={version = "0.6", path = "../crypto", package = "winter-crypto", default-features = false}
fri={version = "0.6", path = "../fri", package = "winter-fri", default-features = false}
fiat-shamir={version = "0.1", path = "../fiat-shamir", package = "fiat-shamir", default-features = false}
poly-args={version = "0.1", path = "../poly-args", package = "poly-args", default-features = false}
mpcith={version = "0.1", path = "../mpcith", package = "mpcith", default-features = false}

human_bytes = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false, features = [ "print-trace", "std" ]}