[package]
name = "poly-args"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto={version = "0.6", path = "../crypto", package = "winter-crypto", default-features = false}
math={version = "0.6", path = "../math", package = "winter-math", default-features = false}
utils = { version = "0.6", path = "../utils/core", package = "winter-utils", default-features = false }
fri={version = "0.6", path = "../fri", package = "winter-fri"}
rand-utils = { version = "0.6", path = "../utils/rand", package = "winter-rand-utils", default-features = false }
fiat-shamir={version = "0.1", path = "../fiat-shamir", package = "fiat-shamir", default-features = false}
human_bytes = { version = "0.4", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }